🩹 Fix: gradient backgound height was not correct on mobile [#70]

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -18,13 +18,13 @@ main::before {
 			#132f6b 73%,
 			#050946 90%
 		);
-	background-size: 100% 100vh;
+	background-size: 100% 100%;
 	display: block;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100vh;
+	height: calc($vh001 * 100);
 	z-index: -1;
 }
 
